@@ -210,10 +210,10 @@ ECHO_N =
 ECHO_T = 
 EGREP = /usr/bin/grep -E
 EXEEXT = 
-F77 = ifort
+F77 = gfortran
 FC = mpif90
 FCFLAGS = -O3 -Warn unused -fpp -openmp -qopt-report=5
-FFLAGS = -g
+FFLAGS = -g -O2
 FFVC_CXX = mpicxx
 FFVC_FC = mpif90
 FFVC_FC_LD = 
@@ -269,7 +269,7 @@ abs_top_builddir = /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/BUILD_DIR
 abs_top_srcdir = /Daily/Development/SphDev/Module/FFVC/ffvc/ffvc/BUILD_DIR/..
 ac_ct_CC = mpicc
 ac_ct_CXX = 
-ac_ct_F77 = ifort
+ac_ct_F77 = gfortran
 ac_ct_FC = 
 am__include = include
 am__leading_dot = .
