@@ -20,6 +20,8 @@ REVISION HISTORY
 
 --------------------------
 2015-07-08
+r1622 non-dim param for stability
+
 r1621 modify Stability Control
 
 r1620 add Stability Control function
